homelab/jellyfin/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin-server
  labels:
    app: jellyfin
    role: server
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: jellyfin
      role: server
  template:
    metadata:
      labels:
        app: jellyfin
        role: server
    spec:
      tolerations:
        - key: valerauko.net/local
          operator: Exists
          effect: NoSchedule
      nodeSelector:
        kubernetes.io/hostname: homelab
      containers:
        - name: server
          image: docker.io/jellyfin/jellyfin:12.1
          ports:
            - name: http
              containerPort: 8096
            - name: dlna
              containerPort: 1900
          volumeMounts:
            - name: cache
              mountPath: /cache
            - name: config
              mountPath: /config
            - name: anime
              mountPath: /library/Anime
            - name: movies
              mountPath: /library/Movies
            - name: music
              mountPath: /library/Music
            - name: shows
              mountPath: /library/Shows
      volumes:
        - name: cache
          persistentVolumeClaim:
            claimName: jellyfin-cache
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config
        - name: anime
          hostPath:
            path: /media/hinoki/Anime
        - name: movies
          hostPath:
            path: /media/hinoki/Movies
        - name: music
          hostPath:
            path: /media/onigurumi/Music
        - name: shows
          hostPath:
            path: /media/hinoki/Shows
